@@ -11,5 +11,5 @@
 			<area shape="{area.shape}" coords="{area.coords}"  href="{area.href}" id="{area.id}" alt="{area.alt}" />
 		</f:for>
 	</map>
-	
+	<input type="hidden" value="{adventcalendar.jQuery.serializedData}" id="serializedjquerydata" />
 </f:section>
